--- a/flashcard/cardify/.vscode/settings.json
+++ b/flashcard/cardify/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "java.project.referencedLibraries": [
-    "./lib/**/*.jar"
-  ]
+    "lib/mongodb-driver-sync-4.11.0.jar",
+    "lib/mongodb-driver-core-4.11.0.jar",
+    "lib/bson-4.11.0.jar"
+  ],
+  "java.project.sourcePaths": [
+    "src"
+  ],
+  "java.project.outputPath": "bin"
 }
